--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "setuptools>=61.0",
+    "tiktoken>=0.5.0",
 ]
 
 [project.optional-dependencies]
